fix(flags): a flag toggle keeps the author's key order (#1213)
config/flags.yml is the author's committed file. Studio reads it, adds one
key and writes the whole document back, and the read went through Map.copyOf,
whose iteration order comes from a per-JVM salt — so every toggle rewrote every
line, in a different order on each boot.

Adds io.tesseraql.core.util.OrderedCopies with the two methods the campaign's
decision 1 calls for: map(Map), insertion-ordered and null-rejecting exactly as
Map.copyOf is because that NullPointerException is the load-time guard against a
value-less key, and mapAllowingNulls(Map), spelled out for the sites that carry
null values deliberately. FlagsSpec takes the first; ScopeResolver.Resolved
takes the second and keeps its reason in a comment.

Both order tests were verified red on the pre-fix branch with their actual key
names: the six flag names have exactly twelve reachable iteration orders and the
authored one is not among them, so they failed on every boot rather than a lucky
fraction of them.

Also records what this slice re-measured against the design document, which was
wrong in five of its six decisions — including its own guard for the signed
documents, which as specified is green on about half of all runs.

Slice 2 of docs/deterministic-output.md.

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>